# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import categoriesRouter from "./categories";
 import adminRouter from "./admin";
 import spotlightRouter from "./spotlight";
 import churchesRouter from "./churches";
+import obituariesRouter from "./obituaries";
 
 const router: IRouter = Router();
 
@@ -14,5 +15,6 @@ router.use("/categories", categoriesRouter);
 router.use("/admin", adminRouter);
 router.use("/spotlight", spotlightRouter);
 router.use("/churches", churchesRouter);
+router.use("/obituaries", obituariesRouter);
 
 export default router;
