# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./categories";
 export * from "./userRoles";
 export * from "./spotlight";
 export * from "./churches";
+export * from "./obituaries";
